--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'ro.cofi.relicdb'
-    mainClass = 'ro.cofi.relicdb.HelloApplication'
+    mainClass = 'ro.cofi.relicdb.RelicDBApplication'
 }
 
 javafx {
@@ -36,6 +36,10 @@ javafx {
 dependencies {
     implementation('org.controlsfx:controlsfx:11.1.1')
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.jsoup:jsoup:1.15.4'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
