--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'ro.cofi'
-version '1.0-SNAPSHOT'
+version '1.0-0-alpha'
 
 repositories {
     mavenCentral()
@@ -60,4 +60,15 @@ jlink {
 
 jlinkZip {
     group = 'distribution'
+}
+
+task relicDBJar(type: Jar) {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    manifest {
+        attributes 'Main-Class': 'ro.cofi.relicdb.Main'
+    }
+    from sourceSets.main.output
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
